# GenLoco

./: .gitignore  README.md
motion_imitation/: run.py
motion_imitation/data/motions/: a1_canter.txt  a1_left turn0.txt  a1_pace.txt  a1_right turn0.txt  a1_trot.txt  a1_trot2.txt  anymal_b_canter.txt  anymal_b_left turn0.txt  anymal_b_pace.txt  anymal_b_right turn0.txt  anymal_b_trot.txt  anymal_b_trot2.txt  anymal_c_canter.txt  anymal_c_left turn0.txt  anymal_c_pace.txt  anymal_c_right turn0.txt  anymal_c_trot.txt  anymal_c_trot2.txt  dkitty_canter.txt  dkitty_left turn0.txt  dkitty_pace.txt  dkitty_right turn0.txt  dkitty_trot.txt  dkitty_trot2.txt  laikago_canter.txt  laikago_left turn0.txt  laikago_pace.txt  laikago_right turn0.txt  laikago_trot.txt  laikago_trot2.txt  mini_cheetah_canter.txt  mini_cheetah_left turn0.txt  mini_cheetah_pace.txt  mini_cheetah_right turn0.txt  mini_cheetah_trot.txt  mini_cheetah_trot2.txt  sirius_canter.txt  sirius_left turn0.txt  sirius_pace.txt  sirius_right turn0.txt  (+2 more)
motion_imitation/envs/: env_builder.py  locomotion_gym_env.py  randomized_gym_env.py
motion_imitation/envs/env_wrappers/: imitation_task.py  imitation_terminal_conditions.py  randomized_imitation_task.py
motion_imitation/envs/utilities/: controllable_env_randomizer_from_config.py  minitaur_env_randomizer_config.py
motion_imitation/examples/: random_action.py  test_env_gui.py
motion_imitation/learning/: imitation_policies.py  ppo_imitation.py
motion_imitation/real_a1/: a1_robot_real.py  udp_interface.py
motion_imitation/robots/: a1.py  aliengo.py  anymal_b_simple.py  anymal_c_simple.py  base_robot.py  go1.py  laikago.py  laikago_motor.py  laikago_pose_utils.py  mini_cheetah.py  random_quadruped.py  robot_pose_utils.py  siriusmid_belt.py  spot.py  spotmicro.py
motion_imitation/utilities/: motion_data.py  quadruped_generator.py
retarget_motion/: printjoints.py  retarget_config_a1.py  retarget_config_anymal_b.py  retarget_config_anymal_c.py  retarget_config_dkitty.py  retarget_config_mini_cheetah.py  retarget_config_sirius.py  retarget_motion.py
robot_descriptions/a1_description/urdf/: a1.urdf
robot_descriptions/aliengo_description/xacro/: aliengo.urdf  robot.xacro
robot_descriptions/anymal_b_simple_description/urdf/: anymal.urdf
robot_descriptions/anymal_c_simple_description/urdf/: anymal.urdf
robot_descriptions/go1_description/urdf/: go1.urdf
robot_descriptions/go1_description/xacro/: leg.xacro  robot.xacro
robot_descriptions/siriusmid_belt_description/meshes/: body_link.STL  lf_abad_link.STL  lf_hip_link.STL  lf_knee_link.STL  lr_abad_link.STL  lr_hip_link.STL  lr_knee_link.STL  rf_abad_link.STL  rf_hip_link.STL  rr_hip_link.STL  (+2 more)
unitree_ros/: .gitignore  data_logger.sh
unitree_ros/reinforce_controller/: CMakeLists.txt  package.xml
unitree_ros/reinforce_controller/include/: mode_detect.h  pd_controller.h  policy_sim_udp.h  quadruped_config.h  stand.h  udp_client_server.h
unitree_ros/reinforce_controller/launch/: rl_control_real.launch  rl_control_sim.launch
unitree_ros/reinforce_controller/src/exe/: gazebo_main.cpp  keyboard_node.cpp  position_mode.cpp  stand_node.cpp  udp_receiver.cpp  udp_sender.cpp
unitree_ros/reinforce_controller/src/util/: UDP.cpp  mode_detect.cpp  pd_controller.cpp  policy_sim_udp.cpp  quadruped_config.cpp  stand.cpp
unitree_ros/reinforce_controller/yaml/: a1_local.yaml  a1_remote.yaml  mini_cheetah_local.yaml
unitree_ros/robots/auxiliary/: CMakeLists.txt  package.xml
unitree_ros/robots/auxiliary/xacro/laser/: hokuyo.xacro
unitree_ros/unitree_gazebo/: CMakeLists.txt  package.xml
(+84 files in other folders)
