<?xml version="1.0"?>
<package format="2">
    <name>auxiliary</name>
    <version>0.0.0</version>
    <description>The auxiliaries package</description>

    <maintainer email="todo@todo.todo">Hybrid Robotics</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

</package>
